--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Deploy
         run: |
+          git fetch
           git checkout deploy
           git add .
           git commit --amend -m "build ${GITHUB_SHA}"
