--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,5 +29,7 @@ jobs:
           git fetch
           git checkout deploy
           git add .
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "actions@github.com"
           git commit --amend -m "build ${GITHUB_SHA}"
           git push
