--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          path: 'new'
+      - uses: actions/checkout@v2
+        with:
+          path: 'deploy:'
+          ref: 'deploy'
 
       - name: Install Node v16
         uses: actions/setup-node@v2
@@ -22,7 +28,11 @@ jobs:
           npm i remarkable
 
       - name: Build
-        run: node deploy.js
+        run: |
+          cd new
+          node deploy.js
+          mv * ../deploy
+          cd ../deploy
 
       - name: Deploy
         run: |
@@ -31,5 +41,6 @@ jobs:
           git add .
           git config --global user.name "github-actions[bot]"
           git config --global user.email "actions@github.com"
-          git commit --amend -m "build ${GITHUB_SHA}"
-          git push -f
+          git commit -m "build ${GITHUB_SHA}"
+          git pull --rebase
+          git push
