--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
     "typescript": "4.6.3"
   },
   "packageManager": "yarn@3.2.1"
