--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^6.3.15",
     "next": "12.1.4",
+    "next-themes": "^0.2.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.4.0",
