--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^6.3.15",
     "next": "12.1.4",
     "next-themes": "^0.2.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.4.0",
-    "swr": "^1.2.2"
+    "swr": "^1.2.2",
+    "use-breakpoint": "^3.0.3"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
