--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.4.0",
-    "swr": "^1.2.2",
-    "use-breakpoint": "^3.0.3"
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
