--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/canvas-confetti": "^1.6.0",
     "canvas-confetti": "^1.6.0",
     "next": "12.1.4",
     "next-themes": "^0.2.0",
