--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "canvas-confetti": "^1.6.0",
     "next": "13",
     "next-themes": "^0.2.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "swr": "^1.2.2"
   },
@@ -29,5 +29,5 @@
     "tailwindcss": "^3.1.4",
     "typescript": "4.6.3"
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "pnpm@8.6.5"
 }
