--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
   "name": "website",
-<<<<<<< HEAD
-  "type": "module",
-=======
->>>>>>> 3cf121b... Initial commit from Astro
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
@@ -12,21 +8,22 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-<<<<<<< HEAD
-  "dependencies": {
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/rss": "^2.4.3",
-    "@astrojs/sitemap": "^2.0.1",
-    "astro": "^2.9.0"
-=======
   "devDependencies": {
     "@astrojs/mdx": "^0.8.3",
+    "@astrojs/react": "^2.2.1",
     "@astrojs/svelte": "^1.0.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "astro": "^1.0.3",
+    "prettier": "^3.0.0",
+    "prettier-plugin-astro": "^0.11.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "rehype-external-links": "^2.0.0"
   },
   "dependencies": {
-    "reading-time": "^1.5.0"
->>>>>>> 3cf121b... Initial commit from Astro
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0"
   }
 }
