--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rehype-external-links": "^2.0.0"
   },
   "dependencies": {
+    "react-icons": "^4.10.1",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.1.0"
