--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.1.0"
-  }
+  },
+  "type": "commonjs"
 }
